--- a/style/style.css
+++ b/style/style.css
@@ -15,7 +15,7 @@ body {
   flex-wrap: wrap;
 }
 .main-container .row img {
-  width: 100%;
+  max-width: 100%;
   height: auto;
 }
 .main-container .nav__items {
@@ -75,7 +75,6 @@ body {
 }
 .work .container.work-content .work-div {
   font-size: 1rem;
-  font-weight: 700;
   display: flex;
   justify-content: start;
   text-align: start;
@@ -83,8 +82,14 @@ body {
 .work .container.work-content .work-div .work-left-content {
   border-right: 1px solid #60606060;
 }
+.work .container.work-content .work-div .work-left-content h4 {
+  font-size: 20px;
+}
+.work .container.work-content .work-div .work-right-content h4 {
+  font-size: 20px;
+}
 .work .container.work-content .work-div .work-right-content p {
-  font-size: 13px;
+  font-size: 18px;
 }
 
 .brand-services {
@@ -123,7 +128,7 @@ body {
   }
 }
 .brand-services .container .VKIY img {
-  width: 40%;
+  min-width: 30%;
 }
 @media (max-width: 991px) {
   .brand-services .container .VKIY img {
@@ -227,9 +232,9 @@ body {
 }
 .footer .footer-body .footer-nav .nav-item {
   margin: 5px;
-  color: white;
 }
 .footer .footer-body .footer-nav .nav-item a {
+  color: black;
   text-decoration: none;
 }
 .footer .footer-body .footer-nav .nav-item a:hover {
