--- a/style/style.css
+++ b/style/style.css
@@ -5,209 +5,132 @@
 body {
   margin: 0px;
   padding: 30px;
-  background-color: black;
+  background-color: black !important;
   font-family: "Open Sans", sans-serif;
 }
 
-.main-container .row {
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-}
-.main-container .row img {
-  max-width: 100%;
-  height: auto;
-}
 .main-container .nav__items {
-  justify-items: center;
-  justify-content: flex-end;
+  list-style-type: none;
 }
 .main-container .nav__items .nav-item {
   margin-left: 20px;
 }
 .main-container .nav__items .nav-item a {
   color: white;
-  text-decoration: none;
 }
 .main-container .nav__items .nav-item a:hover {
   color: white;
   font-weight: bold;
 }
 
-.hero-section {
-  background-color: white;
-}
-.hero-section .container {
-  padding-top: 3rem !important;
-  padding-bottom: 3rem !important;
-  display: flex;
-  flex-direction: column;
-  color: black;
-  text-align: center !important;
-}
-.hero-section .container .hero-heading {
-  margin-bottom: 0px;
-  margin-top: 0px;
-  padding-left: 0px;
-  padding-right: 0px;
+.hero-section .hero-heading {
   font-size: 80px;
-}
-.hero-section .container .row {
-  align-items: center !important;
-}
-.hero-section .container .hero-img {
-  display: flex;
-  justify-content: center;
-}
-.hero-section .container .hero-img img {
-  max-width: 100%;
 }
 
 .work {
-  display: flex;
-  background-color: white;
-  padding: 3rem 0re;
-}
-.work .container.work-content {
-  background-color: black;
   color: white;
-  padding: 3rem;
 }
-.work .container.work-content .work-div {
-  font-size: 1rem;
-  display: flex;
-  justify-content: start;
-  text-align: start;
-}
-.work .container.work-content .work-div .work-left-content {
+.work .work-left-content {
   border-right: 1px solid #60606060;
 }
-.work .container.work-content .work-div .work-left-content h4 {
+.work .work-left-content h4 {
   font-size: 20px;
 }
-.work .container.work-content .work-div .work-right-content h4 {
+.work .work-right-content h4 {
   font-size: 20px;
 }
-.work .container.work-content .work-div .work-right-content p {
+.work .work-right-content p {
   font-size: 18px;
 }
 
-.brand-services {
-  background-color: white;
-}
-.brand-services .container .draftss img {
+.brand-services .draftss img {
   width: 40%;
 }
 @media (max-width: 991px) {
-  .brand-services .container .draftss img {
+  .brand-services .draftss img {
     width: 60%;
   }
 }
-.brand-services .container .prospectss img {
+.brand-services .prospectss img {
   width: 40%;
 }
 @media (max-width: 991px) {
-  .brand-services .container .prospectss img {
+  .brand-services .prospectss img {
     width: 60%;
   }
 }
-.brand-services .container .codingss img {
+.brand-services .codingss img {
   width: 40%;
 }
 @media (max-width: 991px) {
-  .brand-services .container .codingss img {
+  .brand-services .codingss img {
     width: 60%;
   }
 }
-.brand-services .container .designesque img {
+.brand-services .designesque img {
   width: 40%;
 }
 @media (max-width: 991px) {
-  .brand-services .container .designesque img {
+  .brand-services .designesque img {
     width: 60%;
   }
 }
-.brand-services .container .VKIY img {
+.brand-services .VKIY img {
   min-width: 30%;
 }
 @media (max-width: 991px) {
-  .brand-services .container .VKIY img {
+  .brand-services .VKIY img {
     width: 30%;
   }
 }
-.brand-services .container .EventBaba img {
+.brand-services .EventBaba img {
   width: 40%;
 }
 @media (max-width: 991px) {
-  .brand-services .container .EventBaba img {
+  .brand-services .EventBaba img {
     width: 60%;
   }
 }
-.brand-services .container .our-brands {
+.brand-services .our-brands {
   font-size: 4rem;
-  display: flex;
-  justify-content: center;
-  margin-bottom: 0px;
 }
-.brand-services .container .our-brands .our-brands-hide {
+.brand-services .our-brands .our-brands-hide {
   font-size: 2rem;
 }
-.brand-services .container .our-brands-hide {
+.brand-services .our-brands-hide {
   font-size: 1.5rem;
 }
-.brand-services .container .our-brands-hide h3 {
+.brand-services .our-brands-hide h3 {
   margin-bottom: 0px;
 }
-.brand-services .container .head-sev {
+.brand-services .head-sev {
   border-bottom: 1px solid #60606060;
-  align-items: center;
 }
-.brand-services .container .desc-sev {
+.brand-services .desc-sev {
   border-bottom: 1px solid #60606060;
 }
 
 .contact-info {
-  display: flex;
-  background-color: white;
-  padding: 3rem 0rem;
   color: white;
 }
-.contact-info .container {
-  background-color: black;
-}
-.contact-info .container .contact-info-div {
-  display: flex;
-  align-items: center;
-}
-.contact-info .container .contact-info-div .cont-desc {
-  text-align: start;
+.contact-info .container .cont-desc {
   color: white;
 }
-.contact-info .container .contact-info-div .cont-desc .novus-contact {
-  color: #b4b4b4;
-  text-decoration: none;
-}
-.contact-info .container .contact-info-div .cont-desc .novus-contact:hover {
-  color: white;
-}
-.contact-info .container .contact-info-div .cont-desc .novus-address {
-  text-decoration: none;
+.contact-info .container .cont-desc .novus-contact {
   color: #b4b4b4;
 }
-.contact-info .container .contact-info-div .cont-btn {
-  text-align: end;
+.contact-info .container .cont-desc .novus-contact:hover {
+  color: white;
 }
-.contact-info .container .contact-info-div .cont-btn .contact-btn {
-  background-color: white;
-  border-radius: 0;
+.contact-info .container .cont-desc .novus-address {
+  color: #b4b4b4;
+}
+.contact-info .container .cont-btn .contact-btn {
   border: 1px solid white;
   color: black;
-  padding: 15px 30px;
-  font-size: 1rem;
-  font-weight: 700;
 }
-.contact-info .container .contact-info-div .cont-btn .contact-btn:hover {
-  background-color: black;
+.contact-info .container .cont-btn .contact-btn:hover {
+  background-color: black !important;
   color: white;
   cursor: pointer;
 }
@@ -215,27 +138,15 @@ body {
 .footer {
   background-color: white;
 }
-.footer .footer-body {
-  justify-content: space-between;
-  align-items: center;
-}
 .footer .footer-body .footer-logo {
-  display: flex;
-  align-items: center;
   color: black;
-  text-decoration: none;
-}
-.footer .footer-body .footer-nav {
-  display: flex;
-  align-content: center;
-  justify-content: end;
 }
 .footer .footer-body .footer-nav .nav-item {
   margin: 5px;
+  color: black;
 }
 .footer .footer-body .footer-nav .nav-item a {
   color: black;
-  text-decoration: none;
 }
 .footer .footer-body .footer-nav .nav-item a:hover {
   color: black;
