--- a/style/style.scss
+++ b/style/style.scss
@@ -1,4 +1,18 @@
-@import "config";
+::-webkit-scrollbar {
+    display: none;
+}
+
+body {
+    margin: 0px;
+    padding: 30px;
+    background-color: black !important;
+    font-family: "Open Sans", sans-serif;
+}
+
+$color: white;
+$color2: black;
+$color3: #60606060;
+$color4: #b4b4b4;
 
 @mixin breakpoint($point) {
     @if $point == desktop {
@@ -17,23 +31,12 @@
 }
 
 .main-container {
-    .row {
-        display: flex;
-        justify-content: center;
-        flex-wrap: wrap;
-        img{
-            max-width: 100%;
-            height: auto;
-        }
-    }
     .nav__items {
-        justify-items: center;
-        justify-content: flex-end;
+        list-style-type: none;
         .nav-item {
             margin-left: 20px;
             a {
                 color: $color;
-                text-decoration: none;
                 &:hover {
                     color: $color;
                     font-weight: bold;
@@ -44,181 +47,122 @@
 }
 
 .hero-section {
-    background-color: $color;
-    .container {
-        padding-top: 3rem !important;
-        padding-bottom: 3rem !important;
-        display: flex;
-        flex-direction: column;
-        .hero-heading {
-            margin-bottom: 0px;
-            margin-top: 0px;
-            padding-left: 0px;
-            padding-right: 0px;
-            font-size: 80px;
-        }
-        color: $color2;
-        text-align: center !important;
-        .row {
-            align-items: center !important;
-        }
-        .hero-img {
-            display: flex;
-            justify-content: center;
-            img {
-                max-width: 100%;
-            }
-        }
+    .hero-heading {
+        font-size: 80px;
     }
 }
 
 .work {
-    display: flex;
-    background-color: $color;
-    padding: 3rem 0re;
-    .container.work-content {
-        background-color: $color2;
-        color: $color;
-        padding: 3rem;
-        .work-div {
-            font-size: 1rem;
-            display: flex;
-            justify-content: start;
-            text-align: start;
-            .work-left-content {
-                h4{
-                    font-size: 20px;
-                }
-                border-right: 1px solid $color3;
-            }
-            .work-right-content {
-                h4{
-                    font-size: 20px;
-                }
-                p {
-                    font-size: 18px;
-                }
-            }
+    color: $color;
+    .work-left-content {
+        h4 {
+            font-size: 20px;
+        }
+        border-right: 1px solid $color3;
+    }
+    .work-right-content {
+        h4 {
+            font-size: 20px;
+        }
+        p {
+            font-size: 18px;
         }
     }
 }
 
 .brand-services {
-    background-color: $color;
-    .container {
-        .draftss {
-            img {
-                width: 40%;
-                @include breakpoint(desktop) {
-                    width: 60%;
-                }
+    .draftss {
+        img {
+            width: 40%;
+            @include breakpoint(desktop) {
+                width: 60%;
             }
         }
-        .prospectss {
-            img {
-                width: 40%;
-                @include breakpoint(desktop) {
-                    width: 60%;
-                }
+    }
+    .prospectss {
+        img {
+            width: 40%;
+            @include breakpoint(desktop) {
+                width: 60%;
             }
         }
-        .codingss {
-            img {
-                width: 40%;
-                @include breakpoint(desktop) {
-                    width: 60%;
-                }
+    }
+    .codingss {
+        img {
+            width: 40%;
+            @include breakpoint(desktop) {
+                width: 60%;
             }
         }
-        .designesque {
-            img {
-                width: 40%;
-                @include breakpoint(desktop) {
-                    width: 60%;
-                }
+    }
+    .designesque {
+        img {
+            width: 40%;
+            @include breakpoint(desktop) {
+                width: 60%;
             }
         }
-        .VKIY {
-            img {
-                min-width: 30%;
-                @include breakpoint(desktop) {
-                    width: 30%;
-                }
+    }
+    .VKIY {
+        img {
+            min-width: 30%;
+            @include breakpoint(desktop) {
+                width: 30%;
             }
         }
-        .EventBaba {
-            img {
-                width: 40%;
-                @include breakpoint(desktop) {
-                    width: 60%;
-                }
+    }
+    .EventBaba {
+        img {
+            width: 40%;
+            @include breakpoint(desktop) {
+                width: 60%;
             }
         }
-        .our-brands {
-            font-size: 4rem;
-            display: flex;
-            justify-content: center;
-            margin-bottom: 0px;
-            .our-brands-hide {
-                font-size: 2rem;
-            }
-        }
+    }
+    .our-brands {
+        font-size: 4rem;
         .our-brands-hide {
-            font-size: 1.5rem;
-            h3 {
-                margin-bottom: 0px;
-            }
+            font-size: 2rem;
         }
-        .head-sev {
-            border-bottom: 1px solid $color3;
-            align-items: center;
+    }
+    .our-brands-hide {
+        font-size: 1.5rem;
+        h3 {
+            margin-bottom: 0px;
         }
-        .desc-sev {
-            border-bottom: 1px solid $color3;
-        }
+    }
+    .head-sev {
+        border-bottom: 1px solid $color3;
+    }
+    .desc-sev {
+        border-bottom: 1px solid $color3;
     }
 }
 
 .contact-info {
-    display: flex;
-    background-color: $color;
-    padding: 3rem 0rem;
     color: $color;
     .container {
-        background-color: $color2;
-        .contact-info-div {
-            display: flex;
-            align-items: center;
-            .cont-desc {
-                text-align: start;
-                color: $color;
-                .novus-contact {
-                    color: $color4;
-                    text-decoration: none;
-                    &:hover {
-                        color: $color;
-                    }
-                }
-                .novus-address {
-                    text-decoration: none;
-                    color: $color4;
+        .cont-desc {
+            color: $color;
+            .novus-contact {
+                color: $color4;
+                &:hover {
+                    color: $color;
                 }
             }
-            .cont-btn {
-                text-align: end;
-                .contact-btn {
-                    background-color: $color;
-                    border-radius: 0;
-                    border: 1px solid $color;
-                    color: $color2;
-                    padding: 15px 30px;
-                    font-size: 1rem;
-                    font-weight: 700;
-                    &:hover {
-                        background-color: $color2;
-                        color: $color;
-                        cursor: pointer;
-                    }
+            .novus-address {
+                color: $color4;
+            }
+        }
+        .cont-btn {
+            .contact-btn {
+                border: 1px solid $color;
+                color: $color2;
+
+                &:hover {
+                    background-color: $color2 !important;
+                    color: $color;
+                    cursor: pointer;
                 }
             }
         }
@@ -228,23 +172,15 @@
 .footer {
     background-color: $color;
     .footer-body {
-        justify-content: space-between;
-        align-items: center;
         .footer-logo {
-            display: flex;
-            align-items: center;
             color: $color2;
-            text-decoration: none;
         }
         .footer-nav {
-            display: flex;
-            align-content: center;
-            justify-content: end;
             .nav-item {
                 margin: 5px;
+                color: $color2;
                 a {
                     color: $color2;
-                    text-decoration: none;
                     &:hover {
                         color: $color2;
                         font-weight: bold;
